# Rokey_proj_03-Isaac-Sim-

./: .gitignore  ARUCO_PLAN.md  add_camera_mesh.py  add_depth_cameras.py  build_fab_vehicles.py  depth_camera_sim_report.json  export_camera_robot_asset.py  fab_converted_raw.usd  fab_vehicles.usd  hwia_depth_cameras.usda  hwia_parking_robot_final_caster_camera_mesh.urdf  hwia_parking_robot_final_caster_camera_mesh_depth_cam_scene.usd  run_depth_camera_sim.py  run_test_stack.sh
docs/: runbook-park-in-slot.md
hwia_parking_robot_final_caster_package/: add_tip_casters.py  build_mecha_roller_asset.py  hwia_parking_robot_final_caster.usd  hwia_parking_robot_final_caster_README.md
hwia_parking_robot_final_caster_package/configuration/: hwia_parking_robot_final_caster_sensor.usd
isaacpjt/: test.usd  test2.usd
isaacpjt/Isaac_envo/: MECANUM_ROS2_README.md  _bringup.usd  aruco_leg_mission.py  aruco_render_check.py  aruco_render_check_report.json  aruco_sim_bringup.py  build_depth_cam_mecha_asset.py  build_fab_vehicles.py  build_marker_layout.py  build_marker_textures.py  build_parking_with_markers.py  camera_sweep_report.json  check_phantom_colliders.py  depth_stop_detector.py  depth_stop_lift_test.py  depth_stop_lift_test.usd  depth_stop_lift_test_dual.py  depth_stop_lift_test_dual.usd  depth_stop_lift_test_dual_report.json  depth_stop_lift_test_report.json  diag_depth_cam.py  diag_depth_cam2.py  diag_depth_columns.py  diag_depth_profile.py  diag_jitter.py  diag_jitter_report.json  diag_side_cam.py  dock_lift_handoff_mission.py  (+53 more)
parking/: build_integrated_parking_field.py  build_parking_environment.py  parking_environment.usd  parking_robot_field.usd  run_ceiling_lidar_demo.py
parking_control_mvp/: README.md  config.py  main.py  requirements-ros2.txt  run_prs.sh
src/parkbot_aruco/: package.xml  setup.cfg  setup.py
src/parkbot_aruco/data/: marker_map.json
src/parkbot_aruco/parkbot_aruco/: aruco_detector.py  aruco_navigator_node.py  aruco_pose.py  dock_lift_state.py  marker_localizer.py  marker_localizer_node.py  pose_estimator.py
src/parkbot_aruco/test/: test_aruco_pose.py  test_dock_lift_state.py  test_pose_estimator.py
src/parking_control/: package.xml  setup.cfg  setup.py
src/parking_control/config/: lidar_live.rviz  parking_map.yaml  sample_lidar_pointcloud.npy
src/parking_control/db/: 001_schema.sql  002_seed.sql  003_add_robot_target.sql  004_dual_robot_zone_owner.sql  005_vehicle_accessible.sql
src/parking_control/launch/: control_tower.launch.py
src/parking_control/parking_control/: formation_gap_controller_node.py  isaac_parking_bridge_node.py  parking_slot_manager_node.py  pedestrian_cue_node.py  robot_position_bridge_node.py  safety_monitor_node.py  sim_orchestrator_node.py  task_dispatcher_node.py
src/parking_control/parking_control/core/: __init__.py  allocator.py  db.py  formation_costop.py  gap_hold_controller.py  graph.py  hungarian.py  lidar_frame_transform.py  obstacle_detector.py  pathfinder.py  pivot_rotate_controller.py  slot_occupancy_detector.py
src/parking_control/scripts/: dashboard.py  demo_scenarios.sh  dual_robot_virtual_handoff_mission.py  generate_map.py  isaac_entry_mission_server.py  run_isaac_entry_mission_server.sh  run_virtual_handoff_mission.sh  start_control_side.sh
src/parking_control/scripts/lidar/: _fix_mpl3d.py  capture_lidar.py  detect_occupancy.py  generate_sample_pointcloud.py  ros_pointcloud_world_relay.py  run_live_rviz.sh  visualize_lidar.py
src/parking_control/test/: test_allocator.py  test_formation_costop.py  test_gap_hold_controller.py  test_lidar_frame_transform.py  test_obstacle_detector.py  test_pathfinder.py  test_pivot_rotate_controller.py
src/parking_robot_interfaces/: CMakeLists.txt  package.xml
src/parking_robot_interfaces/action/: AlignVehicle.action  ControlLift.action  DetectVehicle.action  ExecuteParkingTask.action
src/parking_robot_interfaces/msg/: FormationAssignment.msg  FormationStop.msg  ObstacleAlert.msg  TaskState.msg  VehicleInfo.msg
src/parking_robot_interfaces/srv/: AcquireZones.srv  FindEmptySlot.srv  GetSlotInfo.srv  GetTaskStatus.srv  ParkInSlot.srv  ReleaseZones.srv  RequestParkingTask.srv
src/parking_robot_system/: package.xml  setup.cfg  setup.py
src/parking_robot_system/launch/: parking_robot_system.launch.py
src/parking_robot_system/parking_robot_system/: align_action_server.py  formation_driver.py  formation_motion.py  frame_transform.py  lift_action_server.py  navigate_action_server.py  occupancy.py  parking_slot_manager.py  robot_task_orchestrator.py  safety_monitor.py  slot_geometry.py  task_dispatcher.py  user_request_gateway.py  vehicle_detection_node.py
src/parking_robot_system/scripts/: ui_dashboard.py  ui_dashboard.sh
src/parking_robot_system/test/: test_dispatcher.py  test_formation_driver.py  test_frame_transform.py  test_gateway.py  test_occupancy.py  test_orchestrator.py  test_slot_geometry.py  test_slot_manager.py
(+55 files in other folders)
