<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parkbot_aruco</name>
  <version>0.1.0</version>
  <description>ArUco 바닥 마커 검출·자세추정 노드 (Phase 1 측위, M2)</description>
  <maintainer email="tmdwodl12@gmail.com">rokey</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- 정식 검출 메시지. 없으면 노드가 PoseArray 로 폴백하지만 설치 권장. -->
  <exec_depend>vision_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
